0.20   2010-10-07

- A test file tried to load MooseX::Role::Parameterized, which was not listed
  as a dep. Reported by Andreas Koenig. RT #61957.


0.19   2010-10-06

- Removed references to MooseX::ClassAttribute::Meta::Method::Accessor, which
  was removed in 0.18. This caused lots of test failures if you hadn't
  installed a previous version of this distribution.


0.18   2010-10-05

- Changes to work with (and require) Moose 1.15.


0.17   2010-09-26

- Changes to work with (and require) Moose 1.09.


0.16   2010-07-15

- More warnings fixes for next Moose release.

- Fix bad repo metadata.


0.15   2010-07-14

- Fix bad uri for bugtracker in metadata


0.14   2010-07-14

- Use modern Moose APIs, to avoid warnings with the next Moose release.


0.13   2010-02-11

- Fixed tests that failed if you had an older version of
  MooseX::AttributeHelpers installed.


0.12   2010-02-10

- Fixed so that applying a role with class attributes to an instance works
  with Moose 0.98.


0.11   2010-02-09

- Roles can now have class attributes, which will be fully initialized when
  the role is applied to a class.

- Many modules have been renamed from MooseX::ClassAttribute::Role::Meta::* to
  MooseX::ClassAttribute::Trait::*.

- Deprecated the get_class_attribute_map method.

- Added a version number to every .pm file.


0.10   2009-08-26

- Fixed to make triggers work with Moose 0.89+, and made triggers pass the old
  attribute value when appropriate just like non-class attributes.


0.09   2009-07-09

- An attribute with a builder that wasn't also lazy caused an
  exception when the attribute's accessor was called. Reported by
  Josh.


0.08   2009-04-07

- Make this module work with Moose 0.73_01+.

- Deprecated compute_all_applicable_class_attributes. Use
  get_all_class_attributes instead.


0.07   2008-11-10

- Fixed a bug where class attributes did not honor the
  Class::MOP::Attribute properly, so things that used it directly