@@ -34,7 +34,7 @@ namespace::autoclean = 0
 
 [Prereqs / TestRequires]
 Test::More      = 0.88
-Test::Exception = 0
+Test::Fatal     = 0
 Scalar::Util    = 0
 Test::Requires  = 0.05
 
